--- a/views/admin/product/edit.ejs
+++ b/views/admin/product/edit.ejs
@@ -1,6 +1,6 @@
 <style>
     .page-title h2 {
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         color: #888;
         font-size: 1.2rem;
         
@@ -144,7 +144,7 @@
 }
 /* The Close Button */
 .close {
-  font-family: 'Rock Salt', cursive;
+  font-family: 'Roboto', sans-serif;
   font-size: 1.2rem;
   color: lightskyblue;
   background: #ecf0f3;
