--- a/views/partials/filters/products-landscape.ejs
+++ b/views/partials/filters/products-landscape.ejs
@@ -44,7 +44,7 @@
         min-height: 150px;
 
         }
-        .arc-top-left {
+        /* .arc-top-left {
         position: absolute;
         width: 50px;
         height: 100%;
@@ -76,7 +76,7 @@
 .arc-top-right:before {
   top: -50px;
   left: -50px;
-}
+} */
 
     .color-filter {
         margin-top: 5px;
