--- a/views/partials/filters/products.ejs
+++ b/views/partials/filters/products.ejs
@@ -213,7 +213,7 @@
             padding: 5px;
         }
         .collapse-buttons > span > i {
-            color: lightskyblue;
+            color: rgba(235, 89, 57, 1);
             font-size: 1.3rem;
  
         
