--- a/views/partials/menus/main.ejs
+++ b/views/partials/menus/main.ejs
@@ -33,7 +33,7 @@
         }
         
         #searchForm input::placeholder {
-            color: lightskyblue;
+            color: rgba(6, 96, 44, 1);
         }
 
         #searchForm button {
@@ -41,7 +41,7 @@
             padding: 5px;
             border: none;
             outline: none;
-            color: lightskyblue;
+            color: rgba(6, 96, 44, 1);
             font-size: 1.2rem;
             background: #ecf0f3;
             box-shadow: 4px 4px 6px #cbced1, -4px -4px 6px #ffffff;
@@ -108,7 +108,7 @@
 
     #productMenu i {
         text-shadow: 0 0 2px rgba(255, 255, 255, 0.25);
-        color: lightskyblue;
+        color: rgba(6, 96, 44, 1);
         font-size: 1.3rem;
     }
     .fade {
@@ -138,8 +138,8 @@
     .overlay2 p {
         text-decoration: none;
         font-size: 1.5rem;
-        font-family: 'Rock Salt', cursive;
-        color: lightskyblue;
+        font-family: 'Roboto', sans-serif;
+        color: rgba(6, 96, 44, 1);
         text-shadow: 0 0 5px rgba(127, 198, 241, 0.5);
         display: block;
         transition: ease-in 0.5s;
@@ -149,8 +149,8 @@
         padding: 5px;
         text-decoration: none;
         font-size: 1.5rem;
-        font-family: 'Rock Salt', cursive;
-        color: lightskyblue;
+        font-family: 'Roboto', sans-serif;
+        color: rgba(6, 96, 44, 1);
         text-shadow: 0 0 5px rgba(127, 198, 241, 0.5);
         display: block;
         transition: ease-in 0.5s;
@@ -165,13 +165,13 @@
 
     .overlay2 .closeproductbtn {
         position: absolute;
-        top: 45px;
+        top: 60px;
         right: 55px;
         font-size: 2rem;
         padding: 8px;
         font-size: 2.2rem;
         z-index: 99961;
-        color: lightskyblue;
+        color: rgba(6, 96, 44, 1);
     }
         
         #sneakerMenu {
@@ -188,7 +188,7 @@
 
     #sneakerMenu i {
         text-shadow: 0 0 2px rgba(255, 255, 255, 0.25);
-        color: lightskyblue;
+        color: rgba(6, 96, 44, 1);
         font-size: 1.3rem;
     }
     .fade {
@@ -218,8 +218,8 @@
     .overlay3 p {
         text-decoration: none;
         font-size: 1.5rem;
-        font-family: 'Rock Salt', cursive;
-        color: lightskyblue;
+        font-family: 'Roboto', sans-serif;
+        color: rgba(6, 96, 44, 1);
         text-shadow: 0 0 5px rgba(127, 198, 241, 0.5);
         display: block;
         transition: ease-in 0.5s;
@@ -229,8 +229,8 @@
         padding: 5px;
         text-decoration: none;
         font-size: 1.5rem;
-        font-family: 'Rock Salt', cursive;
-        color: lightskyblue;
+        font-family: 'Roboto', sans-serif;
+        color: rgba(6, 96, 44, 1);
         text-shadow: 0 0 5px rgba(127, 198, 241, 0.5);
         display: block;
         transition: ease-in 0.5s;
@@ -245,13 +245,13 @@
 
     .overlay3 .closesneakerbtn {
         position: absolute;
-        top: 45px;
+        top: 60px;
         right: 55px;
         font-size: 2rem;
         padding: 8px;
         font-size: 2.2rem;
         z-index: 99965;
-        color: lightskyblue;
+        color: rgba(6, 96, 44, 1);
     }
 
 
@@ -269,6 +269,7 @@
     }
     .user-menu-buttons a {
         font-size: 1rem;
+        color: rgba(235, 89, 57, 1);
     }
 @media screen and (orientation : landscape) {
             #mainMenu {
@@ -320,7 +321,7 @@
             }
             .overlay .closebtn {
                 padding: 0;
-                top: 5px;
+                top: 7px;
             }
             .overlay a {
                 padding: 0;
