--- a/views/products/color.ejs
+++ b/views/products/color.ejs
@@ -65,7 +65,7 @@
                             </div>
                         <% } else { %>
                             
-                            <div style="color: lightskyblue;" class="item-quantity">
+                            <div style="color: rgba(235, 89, 57, 1);" class="item-quantity">
                                 <p>In Stock: <%= product.in_stock %></p>
                             </div>
                         <% } %>
