--- a/views/products/single-product.ejs
+++ b/views/products/single-product.ejs
@@ -79,7 +79,7 @@
         border-radius: 4px;
         font-family: 'Poiret One', cursive;
         font-size: 1rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         transition: ease-in 0.25s;
 
     }
@@ -212,7 +212,7 @@
             </div>
             <% } else { %>
                 
-            <div style="color: lightskyblue;" class="item-quantity">
+            <div style="color: rgba(235, 89, 57, 1);" class="item-quantity">
                 <p>In Stock: <%= product.in_stock %></p>
             </div>
             <div class="item-card-buttons">
