--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -15,7 +15,7 @@
     .user-details-container h5 {
         padding: 12px;
         margin-bottom: 5px;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         color: lightskyblue;
         font-size: 1.2rem;
     }
@@ -48,7 +48,7 @@
     .user-order-history h5 {
         padding: 12px;
         margin-bottom: 5px;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         color: lightskyblue;
         font-size: 1.2rem;
     }
