--- a/views/user/raffle-claim.ejs
+++ b/views/user/raffle-claim.ejs
@@ -14,7 +14,7 @@
         box-shadow: 4px 4px 4px 0px #d1d9e6, -4px -4px 4px 0px #fff;
         border-radius: 8px;
         width: 80%;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         margin-top: 15px;
         margin-bottom: 15px;
     }
