--- a/views/user/raffle-mail.ejs
+++ b/views/user/raffle-mail.ejs
@@ -29,7 +29,7 @@
         padding: 8px;
     }
     .special-instructions-container h6 {
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1rem;
         color: lightskyblue;
     }
@@ -56,7 +56,7 @@
     .user-details-container h5 {
         padding: 12px;
         margin-bottom: 5px;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         color: lightskyblue;
         font-size: 1.2rem;
     }
@@ -179,7 +179,7 @@
     outline: none;
     border: none;
     background-color: #ecf0f3;
-    font-family: 'Rock Salt', cursive;
+    font-family: 'Roboto', sans-serif;
     color: lightskyblue;
     box-shadow: 4px 4px 6px #cbced1, -4px -4px 6px #ffffff;
 }
