--- a/views/user/raffle-success.ejs
+++ b/views/user/raffle-success.ejs
@@ -21,7 +21,7 @@
         font-size: 1.5rem;
         padding-left: 20px;
         color: lightskyblue;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
     }
 
     #raffleHeader i {
@@ -56,7 +56,7 @@
     .raffle-overlay p {
         text-decoration: none;
         font-size: 1.5rem;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         color: lightskyblue;
         text-shadow: 0 0 5px rgba(127, 198, 241, 0.5);
         display: block;
@@ -68,7 +68,7 @@
         padding: 5px;
         text-decoration: none;
         font-size: 1.5rem;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         color: lightskyblue;
         text-shadow: 0 0 5px rgba(127, 198, 241, 0.5);
         display: block;
@@ -120,7 +120,7 @@
         box-shadow: 4px 4px 6px #d1d9e6, -4px -4px 6px #ffffff;
         outline: none;
         border: none;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1.2rem;
         color: lightskyblue;
         background: #ecf0f3;
@@ -163,7 +163,7 @@
         padding: 10px;
         border-radius: 16px;
         color: lightskyblue;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
         background: #ecf0f3;
         border: none;
