--- a/views/admin/invoices/home.ejs
+++ b/views/admin/invoices/home.ejs
@@ -58,7 +58,7 @@
     .user-details-container h5 {
         padding: 12px;
         margin-bottom: 5px;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         color: lightskyblue;
         font-size: 1.2rem;
     }
