--- a/views/admin/raffle-no-product-selected.ejs
+++ b/views/admin/raffle-no-product-selected.ejs
@@ -33,7 +33,7 @@
     }
 
     .create-raffle a {
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
         color: lightskyblue;
         text-decoration: none;
@@ -56,7 +56,7 @@
     }
 
     .hold-raffle-drawing a {
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
         color: lightskyblue;
         text-decoration: none;
