--- a/views/admin/raffle-no-raffle.ejs
+++ b/views/admin/raffle-no-raffle.ejs
@@ -23,7 +23,7 @@
     }
 
     .create-raffle a {
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
         color: lightskyblue;
         text-decoration: none;
@@ -46,7 +46,7 @@
     }
 
     .hold-raffle-drawing a {
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
         color: lightskyblue;
         text-decoration: none;
