--- a/views/admin/raffle-winner.ejs
+++ b/views/admin/raffle-winner.ejs
@@ -6,7 +6,7 @@
         margin-bottom: 30px;
         font-size: 1.5rem;
         color: lightskyblue;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
     }
     .raffle-winner-container h6 {
         font-size: 1.3rem;
