--- a/views/admin/raffle.ejs
+++ b/views/admin/raffle.ejs
@@ -30,7 +30,7 @@
         
     }
     .create-raffle a {
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
         color: lightskyblue;
         text-decoration: none;
@@ -52,7 +52,7 @@
         
     }
     .hold-raffle-drawing a {
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
         color: lightskyblue;
         text-decoration: none;
