--- a/views/admin/users/single-user.ejs
+++ b/views/admin/users/single-user.ejs
@@ -1,6 +1,6 @@
 <style>
     .page-title h5 {
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1rem;
         color: lightskyblue;
     }
@@ -77,7 +77,7 @@
         padding: 8px;
     }
     .special-instructions-container h6 {
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1rem;
         color: lightskyblue;
     }
