--- a/views/cart/checkoutmailing.ejs
+++ b/views/cart/checkoutmailing.ejs
@@ -25,7 +25,7 @@
     }
 
     .special-instructions-container h6 {
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1rem;
         color: lightskyblue;
     }
@@ -54,7 +54,7 @@
     .user-details-container h5 {
         padding: 12px;
         margin-bottom: 5px;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         color: lightskyblue;
         font-size: 1.2rem;
     }
