--- a/views/landing-no-raffle.ejs
+++ b/views/landing-no-raffle.ejs
@@ -24,12 +24,12 @@
     #raffleHeader h2 {
         font-size: 1.5rem;
         padding-left: 20px;
-        color: lightskyblue;
-        font-family: 'Rock Salt', cursive;
+        color: rgba(235, 89, 57, 1);
+        font-family: 'Roboto', sans-serif;
     }
 
     #raffleHeader i {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 2rem;
         padding-right: 20px;
     }
@@ -60,8 +60,8 @@
     .raffle-overlay p {
         text-decoration: none;
         font-size: 1.5rem;
-        font-family: 'Rock Salt', cursive;
-        color: lightskyblue;
+        font-family: 'Roboto', sans-serif;
+        color: rgba(235, 89, 57, 1);
         text-shadow: 0 0 5px rgba(127, 198, 241, 0.5);
         display: block;
         transition: ease-in 0.5s;
@@ -72,8 +72,8 @@
         padding: 5px;
         text-decoration: none;
         font-size: 1.5rem;
-        font-family: 'Rock Salt', cursive;
-        color: lightskyblue;
+        font-family: 'Roboto', sans-serif;
+        color: rgba(235, 89, 57, 1);
         text-shadow: 0 0 5px rgba(127, 198, 241, 0.5);
         display: block;
         transition: ease-in 0.5s;
@@ -124,9 +124,9 @@
         box-shadow: 4px 4px 6px #d1d9e6, -4px -4px 6px #ffffff;
         outline: none;
         border: none;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1.2rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         background: #ecf0f3;
         border-radius: 8px;
     }
