--- a/views/todo-list.ejs
+++ b/views/todo-list.ejs
@@ -14,7 +14,7 @@
         text-align: center;
         font-size: 1.5rem;
         padding: 15px;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
     }
 
     .todo-input {
@@ -40,7 +40,7 @@
         margin: 0 auto;
         margin-top: 15px;
         padding: 10px;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         border-radius: 16px;
         background: #ecf0f3;
         box-shadow: 4px 4px 4px 0px #d1d9e6, -4px -4px 4px 0px #fff;
@@ -60,7 +60,7 @@
 
     .todo-container-header h3 {
         color: lightskyblue;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
     }
 
