--- a/views/user/mailing-edit.ejs
+++ b/views/user/mailing-edit.ejs
@@ -100,7 +100,7 @@
 .delete-address-button a {
     color: red;
     font-size: 1.5rem;
-    font-family: 'Rock Salt', cursive;
+    font-family: 'Roboto', sans-serif;
     text-decoration: none;
     padding: 10px;
     width: 100%;
