--- a/views/user/mailing.ejs
+++ b/views/user/mailing.ejs
@@ -22,7 +22,7 @@
     }
     .current-addresses-container h5 {
         color: lightskyblue;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1.3rem;
         text-align: center;
         margin-bottom: 15px;
@@ -45,7 +45,7 @@
         padding: 8px;
     }
     .special-instructions-container h6 {
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1rem;
         color: lightskyblue;
     }
@@ -84,7 +84,7 @@
     .user-details-container h5 {
         padding: 12px;
         margin-bottom: 5px;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         color: lightskyblue;
         font-size: 1.2rem;
     }
