--- a/views/user/raffle.ejs
+++ b/views/user/raffle.ejs
@@ -22,7 +22,7 @@
         font-size: 1.5rem;
         padding-left: 20px;
         color: lightskyblue;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
     }
 
     #raffleHeader i {
@@ -58,7 +58,7 @@
     .raffle-overlay p {
         text-decoration: none;
         font-size: 1.5rem;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         color: lightskyblue;
         text-shadow: 0 0 5px rgba(127, 198, 241, 0.5);
         display: block;
@@ -70,7 +70,7 @@
         padding: 5px;
         text-decoration: none;
         font-size: 1.5rem;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         color: lightskyblue;
         text-shadow: 0 0 5px rgba(127, 198, 241, 0.5);
         display: block;
@@ -123,7 +123,7 @@
         box-shadow: 4px 4px 6px #d1d9e6, -4px -4px 6px #ffffff;
         outline: none;
         border: none;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
         font-size: 1.2rem;
         color: lightskyblue;
         background: #ecf0f3;
@@ -169,7 +169,7 @@
     .ticket-header h3 {
         font-size: 1.5rem;
         color: lightskyblue;
-        font-family: 'Rock Salt', cursive;
+        font-family: 'Roboto', sans-serif;
     }
     .claim-prize {
         width: 100%;
